# telegram-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SDD.md  chats.toml.example  pyproject.toml
.claude/hooks/: block_obsidian_direct.sh
.claude/rules/: project.md
hooks/: sdd_validator.py
specs/: SPEC_INDEX.md  TODO.md
specs/core/: mcp_server.narrative.md  mcp_server.technical.md  search.narrative.md  search.technical.md  storage.narrative.md  storage.technical.md  telegram_client.narrative.md  telegram_client.technical.md
src/extraction/: extractor.py
src/mcp/: __init__.py  responses.py  server.py  sync.py
src/search/: __init__.py  models.py  search.py
src/storage/: __init__.py  config.py  models.py  parser.py  storage.py
src/telegram/: __init__.py  client.py  config.py  models.py
tests/spec/core/: test_mcp_server_spec.py  test_search_spec.py  test_storage_spec.py  test_telegram_client_spec.py
